--- a/stock_weighing/wizards/weighing_wizard_views.xml
+++ b/stock_weighing/wizards/weighing_wizard_views.xml
@@ -3,7 +3,11 @@
     <record id="weighing_wizard_form_view" model="ir.ui.view">
         <field name="model">weighing.wizard</field>
         <field name="arch" type="xml">
-            <form create="false" string="Record Weight">
+            <form
+                create="false"
+                string="Record Weight"
+                js_class="weight_recording_form"
+            >
                 <field name="selected_move_line_id" invisible="1" />
                 <field name="wizard_state" invisible="1" />
                 <field name="move_id" invisible="1" />
@@ -27,6 +31,7 @@
                         name="weight"
                         class="input-group-lg"
                         nolabel="1"
+                        default_focus="1"
                         widget="numeric_step"
                         options="{'auto_select': True, 'min': 0, 'add_class': 'form-control-lg text-center text-info o_input_weight', 'remove_class': 'form-control'}"
                     />
@@ -58,7 +63,7 @@
                         <button
                             name="add_operation_and_record"
                             type="object"
-                            class="btn btn-secondary"
+                            class="btn btn-secondary default-enter"
                             attrs="{'invisible': [('wizard_state', '=', 'weight')]}"
                             data-hotkey="s"
                             context="{'reload_wizard_action': True}"
